--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Welcome 👋</h1>
     <p>This is my personal website hosted on GitHub Pages!</p>
+    <p>Created by YG</p>
   </body>
 </html>
