--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Yoona's Homepage</title>
   </head>
   <body>
-    <h1>Welcome 👋</h1>
-    <p>This is my personal website hosted on GitHub Pages!</p>
-    <p>Created by YG</p>
+    <h1>Welcome to Yoona's Personal Page 👋</h1>
+    <p>I'm a M.A. graduate from the University of Texas at Austin</p>
+
   </body>
 </html>
